--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "untitled1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://phuch.github.io/ServerSideScriptingLanguage-Week1",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
@@ -14,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
