--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "homepage": "https://phuch.github.io/ServerSideScriptingLanguage-Week1",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "exif-js": "^2.3.0",
     "gh-pages": "^1.1.0",
     "google-map-react": "^0.34.0",
     "google-maps-react": "^1.1.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-google-maps": "^9.4.5"
+    "react-google-maps": "^9.4.5",
+    "react-tabs": "^2.2.1"
   },
   "devDependencies": {
     "react-scripts": "1.1.1"
