--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "homepage": "https://phuch.github.io/Nodejs-WeeklyAssignment",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "cors": "^2.8.4",
     "exif-js": "^2.3.0",
+    "express": "^4.16.3",
     "gh-pages": "^1.1.0",
     "google-map-react": "^0.34.0",
     "google-maps-react": "^1.1.6",
+    "jsonfile": "^4.0.0",
+    "moment": "^2.21.0",
+    "mongoose": "^5.0.12",
+    "multer": "^1.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-google-maps": "^9.4.5",
-    "react-tabs": "^2.2.1"
+    "react-tabs": "^2.2.1",
+    "sharp": "^0.20.1"
   },
   "devDependencies": {
     "react-scripts": "1.1.1"
@@ -24,5 +31,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
